# Diabetes

./: README.md  app.py
.devcontainer/: devcontainer.json
DiabetesModel/: custom_model.py  diabetesbal.csv  main.py  mlp.ipynb  pyproject.toml  viz.ipynb  xgb.ipynb
DiabetesModel/Algorithm_tests/: knn.ipynb  light_gbm.ipynb
RAG_Diabetes/: app.py  obj.py  prepos.py  pyproject.toml  rag_retriever.py  recommed.py  requirements.txt
RAG_Diabetes/Notebooks/: data_ingestion.ipynb  doc.ipynb  doc_processor.py  embedding_manager.py  rag_retriever.py  vectorstore.py
RAG_Diabetes/RAG_DOCs/Prepros/: diabetes.csv
RAG_Diabetes/RAG_DOCs/vector_store/25c6896d-11a3-4037-acf2-fab3d17671ca/: index_metadata.pickle
RAG_Diabetes/RAG_DOCs/vector_store_prepro/6855f25a-f72d-4f6c-abba-f8634ceffefb/: index_metadata.pickle
RAG_Diabetes/diabetes_model_files/: custom_model.py
RAG_Diabetes/src/: data_loader.py  embedding.py  generator.py  search.py  vectorstore.py
