[project]
name = "rag-diabetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "chromadb>=1.3.0",
    "google-genai>=1.48.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.49.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "numpy>=2.3.4",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "torch==2.2.2",
]
